--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
 # Node modules
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Logs
 logs
 *.log
 logs/
 
+# Dependency directories
+client/node_modules/
+server/node_modules/
+
 # Build directories
 dist/
 build/
 
-# Dependency directories
-client/node_modules/
-server/node_modules/
+# Tailwind CSS generated files
+*.css.map
+*.min.css
+
+# Coverage reports
+coverage/
+*.lcov
 
 # Environment variables
 .env
@@ -27,9 +32,20 @@ server/node_modules/
 # Production files
 build/
 
-# Coverage reports
-coverage/
-*.lcov
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Webpack or other build cache
+.cache/
+
+# SASS/SCSS cache
+.sass-cache/
+
+# TypeScript cache
+*.tsbuildinfo
 
 # IDEs and editors
 .vscode/
@@ -49,24 +65,6 @@ temp/
 *.bak
 *.tmp
 
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Babel cache
-.cache/
-
-# Webpack
-.cache/
-
-# SASS/SCSS cache
-.sass-cache/
-
-# TypeScript cache
-*.tsbuildinfo
-
-# React Native
-.expo/
-.expo-shared/
+# Other
+yarn-error.log
+npm-debug.log*
