--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
     "react-multi-carousel": "^2.8.5",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
