--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropdown": "^1.11.0",
     "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
