--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -19,7 +16,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4",
     "serverless-http": "^3.2.0"
   }
 }
