--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,16 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "builds": [
     {
-      "src": "api/**/*.js",
+      "src": "*.js",
       "use": "@vercel/node"
     }
-  ]
+  ],
+
+"routes": [
+  {
+    "src": "/(.*)",
+    "dest": "/"
+  }
+]
 }
